# agri_raster_polygonizer

./: .gitignore  CMakeLists.txt  DatabaseConnector.cpp  DatabaseConnector.h  EnvLoader.cpp  EnvLoader.h  GeoJsonExporter.cpp  GeoJsonExporter.h  Polygonizer.cpp  Polygonizer.h  README.md  RasterGrid.cpp  RasterGrid.h  main.cpp
